--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.26.0",
     "ngx-bootstrap": "^3.2.0",
+    "ngx-infinite-scroll": "^9.0.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
