--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.26.0",
     "ngx-bootstrap": "^3.2.0",
     "ngx-infinite-scroll": "^9.0.0",
+    "ngx-spinner": "^7.2.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
@@ -38,6 +39,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular-file": "^3.0.1",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
