--- a/hahu/package.json
+++ b/hahu/package.json
@@ -16,11 +16,16 @@
     "cordova-android": "^8.1.0"
   },
   "devDependencies": {
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-plugin-camera": "~2.1.1"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-camera": {
+        "CAMERA_USAGE_DESCRIPTION": "App want to access your camera",
+        "PHOTOLIBRARY_USAGE_DESCRIPTION": "App want to access your camera to upload images"
+      }
     },
     "platforms": [
       "android"
