--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "lite-server  --baseDir=dist/hahu-app"
   },
   "private": true,
   "dependencies": {
@@ -22,9 +23,11 @@
     "@babel/compat-data": "^7.8.0",
     "@creative-tim-official/argon-dashboard-free": "^1.1.0",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "moment": "^2.26.0",
+    "ng2-charts": "^2.3.2",
     "ngx-bootstrap": "^5.6.1",
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-spinner": "^8.1.0",
@@ -49,6 +52,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.5.4",
     "ng-swagger-gen": "^2.2.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
