--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-bootstrap": "^5.6.1",
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-spinner": "^8.1.0",
+    "ngx-textarea-autosize": "^2.0.3",
     "ngx-ui-switch": "^8.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^1.9.0",
