--- a/package.json
+++ b/package.json
@@ -22,19 +22,24 @@
     "@angular/router": "^8.2.14",
     "@babel/compat-data": "^7.8.0",
     "@creative-tim-official/argon-dashboard-free": "^1.1.0",
+    "angular2-swing": "^0.14.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "moment": "^2.26.0",
     "ng2-charts": "^2.3.2",
     "ngx-bootstrap": "^5.6.1",
     "ngx-infinite-scroll": "^9.0.0",
+    "ngx-quill": "^8.1.8",
     "ngx-spinner": "^8.1.0",
     "ngx-textarea-autosize": "^2.0.3",
     "ngx-ui-switch": "^8.3.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.5",
     "tslib": "^1.9.0",
+    "webviews": "^1.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
