--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ng2-charts": "^2.3.2",
     "ngx-bootstrap": "^5.6.1",
     "ngx-infinite-scroll": "^9.0.0",
+    "ngx-long-press2": "^1.0.0",
     "ngx-quill": "^8.1.8",
     "ngx-spinner": "^8.1.0",
     "ngx-textarea-autosize": "^2.0.3",
